tests/error/func_ret_array_empty.gw
// [contains] 
 function void my_func(int i[1]){}
